SERVER-8246 Add instanceof support for MinKey/MaxKey